# guiamanager

./: .env  .gitignore  ARCHITECTURE.md  README.md  files.json  main.py  pyproject.toml  rascunho.xml  requirements.txt  test.py
application/exceptions/: application_exception.py
application/usecases/: adicionar_certificado_usecase.py  adicionar_guia_use_case.py  adicionar_guia_usecase.py  adicionar_loja_usecase.py  adicionar_site_use_case.py  adicionar_site_usecase.py  atualizar_certificado_usecase.py  atualizar_guia_usecase.py  atualizar_loja_use_case.py  atualizar_site_use_case.py  atualizar_site_usecase.py  deletar_certificado_usecase.py  deletar_guia_usecase.py  deletar_loja_use_case.py  deletar_site_use_case.py  deletar_site_usecase.py  gerar_guia_use_case.py  gerar_guia_usecase.py  importar_guias_excel_use_case.py  listar_guias_use_case.py  listar_guias_usecase.py  listar_lojas_use_case.py  listar_sites_use_case.py  listar_sites_usecase.py  procurar_certificado_by_id_usecase.py  procurar_certificado_by_loja_id_usecase.py  procurar_guia_by_id_use_case.py  procurar_guia_use_case.py  procurar_loja_use_case.py  procurar_site_use_case.py  procurar_url_site_use_case.py
domain/entities/: certificado.py  guia.py  loja.py  site.py
domain/repositories/: i_certificado_repository.py  i_guia_repository.py  i_loja_repository.py  i_site_repository.py  loja_repository.py  site_repository.py
domain/services/: i_guia_generator_service.py  i_read_excel_service.py
infrastructure/: config.py
infrastructure/data/: app_database.db
interface/gui/: app.py  (+1 more)
shared/: settings.py
(+40 files in other folders)
