[project]
name = "guiamanager"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiz Filipe Tosta da Silva",email = "luizftosta@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs (==25.3.0)",
    "beautifulsoup4 (==4.13.5)",
    "bs4 (==0.0.2)",
    "certifi (==2025.8.3)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.3)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "mouseinfo (==0.1.3)",
    "numpy (==2.3.3)",
    "outcome (==1.3.0.post0)",
    "pandas (==2.3.2)",
    "pillow (==11.3.0)",
    "pyautogui (==0.9.54)",
    "pycparser (==2.23)",
    "pygetwindow (==0.0.9)",
    "pymsgbox (==1.0.9)",
    "pyperclip (==1.9.0)",
    "pyrect (==0.2.0)",
    "pyscreeze (==1.0.1)",
    "pysocks (==1.7.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytweening (==1.2.0)",
    "pytz (==2025.2)",
    "requests (==2.32.5)",
    "selenium (==4.35.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "soupsieve (==2.8)",
    "tkinterdnd2 (==0.4.3)",
    "trio (==0.30.0)",
    "trio-websocket (==0.12.2)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "websocket-client (==1.8.0)",
    "wsproto (==1.2.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main"